album & scenes fix

--- a/horizontal-scrolling.css
+++ b/horizontal-scrolling.css
@@ -1,7 +1,5 @@
 .layout-desktop #indexPage .itemsContainer,
 .layout-tv #indexPage .itemsContainer,
-.layout-desktop #childrenContent .itemsContainer.padded-right.vertical-wrap,
-.layout-tv #childrenContent .itemsContainer.padded-right.vertical-wrap,
 .layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX,
 .layout-tv #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX,
 .layout-desktop #castCollapsible .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX,
@@ -14,3 +12,5 @@
 .layout-tv #specialsCollapsible .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX {display: flex !important; flex-wrap: nowrap !important; gap: unset;}
 #indexPage button[data-direction="left"], #indexPage button[data-direction="right"] {opacity: 0.5; padding-right: 1em;}
 #itemDetailPage button[data-direction="left"], #itemDetailPage button[data-direction="right"] { opacity: 0.5; }
+.verticalSection[data-type="MusicAlbum"] .itemsContainer.padded-right.vertical-wrap { flex-wrap: wrap! important;}
+.layout-desktop #itemDetailPage .scrollSlider.itemsContainer, .layout-tv #itemDetailPage .scrollSlider.itemsContainer { flex-wrap: nowrap !important; white-space: normal !important;}
