--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -8,8 +8,21 @@
 	opacity: 0;
 }
 
-:root { --accent: #000; }
+:root {--accent: #8546ff;}
 
+
+.layout-desktop #itemDetailPage .listItem,
+.layout-tv #itemDetailPage .listItem {
+  background: #00000080;
+}
+
+.layout-desktop #listChildrenCollapsible #childrenContent .itemsContainer:has(.listItem[data-type="Episode"]) .listViewUserDataButtons, .layout-tv #listChildrenCollapsible #childrenContent .itemsContainer:has(.listItem[data-type="Episode"]) .listViewUserDataButtons {
+  background: transparent !important;
+}
+
+.layout-desktop #listChildrenCollapsible.verticalSection-extrabottompadding #childrenContent .itemsContainer.padded-right.vertical-list .listItem.listItem-largeImage.listItem-withContentWrapper .listItem-content .listItemBody.itemAction, .layout-tv #listChildrenCollapsible.verticalSection-extrabottompadding #childrenContent .itemsContainer.padded-right.vertical-list .listItem.listItem-largeImage.listItem-withContentWrapper .listItem-content .listItemBody.itemAction {
+  background: transparent;
+}
 
 .countIndicator, 
 .playedIndicator {
@@ -288,7 +301,7 @@
 	left: 0;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient( 90deg, rgb(0 0 0) 0%, rgba(0, 0, 0, 0.98) 25%, rgba(0, 0, 0, 0.5) 33%, rgba(0, 0, 0, 0) 40% );
+	background: linear-gradient( 90deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0.76) 25%, rgba(0, 0, 0, 0.54) 33%, rgba(0, 0, 0, 0) 40% );
 	background-size: cover;
 	opacity: 1;
 	z-index: -1;
@@ -350,7 +363,7 @@
 }
 
 .paper-icon-button-light:hover, .raised.homeLibraryButton:hover, .button-flat:hover, .playstatebutton-icon-played, .paper-icon-button-light:hover:not(:disabled), .emby-tab-button:hover, .selectLabelFocused, .inputLabelFocused, .textareaLabelFocused, .buttonActive, .button-link {
-  color: #000;
+  color: var(--accent);
 }
 
 .defaultCardBackground1 {
